# circuit-synthesis

./: .gitignore  LICENSE  Readme.md  build-app.sh  build-cxs.sh  build.sh  circuit-synthesis.cabal  circuits.cry  comparison.dsl.acirc  cryptol2verilog  gc_cells.lib  gf28Double.o3.acirc  linearParts.opt2.acirc  makefile  point.dsl.acirc  todo
app/: Main.hs
apps/boots/: Boots.hs  Main.hs
apps/boots/Boots/: Garbler.hs
apps/cxs/: CXS.hs
circuits/: aes.hs  goldreich.hs  tribes.hs
cryptol/: 3dnf.cry  AES.cry  applebaum.cry  comparison.cry  goldreich.cry  mapper.cry  mimc.cry  pow.cry  rachael.cry  simple-circuits.cry  trivium.cry
docs/: ir-format.md
docs/examples/: sample1.acirc
liberties/: aig.lib  arith.lib  gc_cells.lib
optimized_circuits/: aes.acirc2  aes.nigel  aes1r.acirc  aes1r.o2.acirc  gf28Triple.o3.acirc  prg_128_128.o2.acirc
scripts/: aes-table  bench2circ.pl  c2a  c2v  cryptol2acirc  cryptol2circ  cryptol2verilog  gc-bench.sh  gen-table  generate-circuits.sh  generate-tests.sh  goldreich-table  latex-info  poly-sage.sage  poly.py  resolve-netlist-aliases.pl  verilog2acirc.py  verilog2circ.pl
src/: Circuit.hs  Dot.hs  Main.hs  Rand.hs  Types.hs  Util.hs
src/Circuit/: Acirc.hs  AcircParser.hs  Arbitrary.hs  Builder.hs  Conversion.hs  Graphviz.hs  Optimizer.hs  Parser.hs  TypeCheck.hs  Types.hs  Utils.hs  VerilogParser.hs
src/Circuit/Builder/: Internals.hs
src/Circuit/Format/: Acirc.hs  Acirc2.hs  Bench.hs  Circ.hs  Graphviz.hs  Netlist.hs  Nigel.hs  Sage.hs  Sexp.hs  Verilog.hs
src/Circuits/: Aes.hs  BBKK.hs  Comparison.hs  Goldreich.hs  Point.hs  Tribes.hs
src/Examples/: AES.hs  Aes.hs  ApplebaumRaykov.hs  BBKK.hs  Comparison.hs  DNF.hs  GGM.hs  Garbler.hs  Goldreich.hs  Point.hs  Simple.hs  Substring.hs  Tribes.hs
tobrs/: Cargo.toml
tobrs/src/: circuit.rs  format.rs  main.rs
tobrs/src/format/: bench.rs  bristol.rs
