name:                circuit-synthesis
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Brent Carmer
maintainer:          bcarmer@gmail.com
category:            Cryptography
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:      Circuit
                        , Circuit.Builder
                        , Circuit.Builder.Internals
                        , Circuit.Conversion
                        , Circuit.Optimizer
                        , Circuit.Parser
                        , Circuit.Types
                        , Circuit.Utils
                        , Circuit.Format.Acirc
                        , Circuit.Format.Acirc2
                        , Circuit.Format.Bench
                        , Circuit.Format.Circ
                        , Circuit.Format.Graphviz
                        , Circuit.Format.Netlist
                        , Circuit.Format.Nigel
                        , Circuit.Format.Sexp
                        , Examples.AES
                        , Examples.ApplebaumRaykov
                        , Examples.Comparison
                        , Examples.DNF
                        , Examples.Goldreich
                        , Examples.GGM
                        , Examples.Point
                        , Examples.Simple
                        , Examples.Substring

    build-depends:
          DRBG
        , array
        , base
        , binary
        , bytestring
        , containers
        , crypto-api
        , directory
        , filepath
        , formatting
        , ghc-prim
        , integer-gmp
        , microlens-platform
        , monad-loops
        , mtl
        , optparse-applicative
        , parsec
        , process
        , text
        , text-show
        , vector
        , wl-pprint-text


    default-extensions:   DoAndIfThenElse
    ghc-options: -O2 -fwarn-unused-imports -freverse-errors

executable cxs
    default-language: Haskell2010
    hs-source-dirs: apps/cxs
    main-is: CXS.hs
    build-depends:        base
                        , circuit-synthesis
                        , containers
                        , filepath
                        , microlens-platform
                        , optparse-applicative
                        , text
                        , split
    ghc-options: -O2 -freverse-errors
