name:                circuit-synthesis
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Brent Carmer
maintainer:          bcarmer@gmail.com
category:            Cryptography
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.10

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:      Circuit
                        , Circuit.Builder
                        , Circuit.Builder.Internals
                        , Circuit.Conversion
                        , Circuit.Optimizer
                        , Circuit.Parser
                        , Circuit.Types
                        , Circuit.Utils
                        , Circuit.Format.Acirc
                        , Circuit.Format.Acirc2
                        , Circuit.Format.Bench
                        , Circuit.Format.Circ
                        , Circuit.Format.Graphviz
                        , Circuit.Format.Netlist
                        , Circuit.Format.Nigel
                        , Circuit.Format.Sexp
                        , Examples.AES
                        , Examples.ApplebaumRaykov
                        , Examples.Comparison
                        , Examples.DNF
                        , Examples.Goldreich
                        , Examples.GGM
                        , Examples.Point
                        , Examples.Simple
                        , Examples.Substring

    build-depends:
        DRBG                  >= 0.5.5 && < 0.6,
        base                  >= 4.11.1 && < 4.12,
        ghc-prim              >= 0.5.2 && < 0.6,
        integer-gmp           >= 1.0.2 && < 1.1,
        bytestring            >= 0.10.8 && < 0.11,
        array                 >= 0.5.2 && < 0.6,
        containers            >= 0.5.11 && < 0.6,
        crypto-api            >= 0.13.3 && < 0.14,
        binary                >= 0.8.5 && < 0.9,
        directory             >= 1.3.1 && < 1.4,
        filepath              >= 1.4.2 && < 1.5,
        mtl                   >= 2.2.2 && < 2.3,
        parsec                >= 3.1.13 && < 3.2,
        text                  >= 1.2.3 && < 1.3,
        process               >= 1.6.3 && < 1.7,
        formatting            >= 6.3.6 && < 6.4,
        microlens-platform    >= 0.3.10 && < 0.4,
        vector                >= 0.12.0 && < 0.13,
        monad-loops           >= 0.4.3 && < 0.5,
        optparse-applicative  >= 0.14.2 && < 0.15,
        text-show             >= 3.7.4 && < 3.8,
        wl-pprint-text        >= 1.2.0 && < 1.3,
        split                 >= 0.2.3 && < 0.3

    default-extensions:   DoAndIfThenElse
    ghc-options: -O2 -fwarn-unused-imports -freverse-errors

executable cxs
    default-language: Haskell2010
    hs-source-dirs: apps/cxs
    main-is: CXS.hs
    build-depends:        base
                        , circuit-synthesis
                        , containers
                        , filepath
                        , microlens-platform
                        , optparse-applicative
                        , text
                        , split
    ghc-options: -O2 -freverse-errors
